--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.4.1
+dj-database-url==0.5.0
 Django==3.2.6
 django-debug-toolbar==3.2.2
 django-environ==0.8.1
 djangorestframework==3.12.4
+environ==1.0
+gunicorn==20.1.0
 Pillow==8.4.0
 psycopg2==2.9.1
 pytz==2021.1
 sqlparse==0.4.1
+whitenoise==5.3.0
