--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.2.6
 django-debug-toolbar==3.2.2
 django-environ==0.8.1
+django-heroku==0.3.1
 djangorestframework==3.12.4
 environ==1.0
 gunicorn==20.1.0
