--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.4.1
+boto3==1.20.17
+botocore==1.23.17
 dj-database-url==0.5.0
 Django==3.2.6
 django-debug-toolbar==3.2.2
 django-environ==0.8.1
 django-heroku==0.3.1
+django-storages==1.12.3
 djangorestframework==3.12.4
 environ==1.0
 gunicorn==20.1.0
+jmespath==0.10.0
 Pillow==8.4.0
 psycopg2==2.9.1
+python-dateutil==2.8.2
 pytz==2021.1
+s3transfer==0.5.0
+six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.7
 whitenoise==5.3.0
